--- a/public/style.css
+++ b/public/style.css
@@ -2,53 +2,120 @@
     *{
         box-sizing: border-box
     }
-    body{
-        height: 100vh;
-        background-color: #fb6b6b;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .root{
-        width: 120px;
-        height: 110px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .logo{
-        height: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;    
-        margin-bottom: 75px;
-    }
-    img{
-        object-fit: cover;                       
-        width: 55px;
-        height: 65px;
-        margin-bottom: 10px;
-    }
+    /* ESTILO GERAL */
     h1{
         font-family: 'Righteous', cursive;
-        font-size: 25px;
         font-style: normal;
         font-weight: 400;
-        line-height: 31px;
-        letter-spacing: -0.012em;
         text-align: center;
         color: white;
     }
-
-    button{
+    img{
+        object-fit: cover;                       
+    }
+    .icone-pergunta{
+        font-size: 15px;
+        color: #333333;
+    }
+    p{
+        font-family: 'Recursive', cursive;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 14px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: #333333;
+    }
+    /*  ______ FIM ______ */
+    
+    body{
+        height: 100vh;
+        background-color: #fb6b6b;
+    }
+    .root{
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .logo{
+        position: relative;
+        top: 25%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .logo img{
+        width: 55px;
+        height: 65px;
+    }
+    .logo h1{
+        font-size: 25px;
+        line-height: 31px;
+        letter-spacing: -0.012em;
+    }
+    .iniciar{
+        position: relative;
+        top: 35%;
         height: 31px;
         width: 141px;
         padding: 7px 3px 7px 3px;
         border-radius: 5px;
         border: 1px solid #D70900;
         color: #D70900
+    }
+    header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 40px;
+        margin-top: 22px;
+    }
+    header img{
+        object-fit: scale-down;
+        width: 56px;
+        height: 60px;
+        margin-right: 5px;
+    }
+    header h1{
+        font-size: 40px;
+        line-height: 35px;
+        letter-spacing: -0.012em;
+    }
+    .pergunta{
+        display: flex;
+        align-items: center;
+        height: 40px;
+        width: 200px;
+        border-radius: 5px;
+        border: none;
+        justify-content: space-between;
+        margin-bottom: 7px;
+    }
+    .pergunta p {
+        font-size: 12px;
+    }
+    footer{
+        position: fixed;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 50px;
+        width: 100%;
+        background-color: #fff;
+    }
+    footer p {
+        font-size: 12px;
+        font-weight: normal;
+        line-height: 14px;
+    }   
+    .on{
+        display: block;
+    }
+    .off{
+        display: none;
     }
 }
