--- a/public/style.css
+++ b/public/style.css
@@ -86,17 +86,93 @@
     }
     .pergunta{
         display: flex;
-        align-items: center;
-        height: 40px;
+        flex-direction: column;
         width: 200px;
-        border-radius: 5px;
-        border: none;
-        justify-content: space-between;
         margin-bottom: 7px;
     }
-    .pergunta p {
+    .pergunta-primeira-tela{
+        width: 200px;
+        display: flex;
+        align-items: center;
+        height: 40px;
+        border: none;
+        justify-content: space-between;
+        border-radius: 5px;
+    }
+    .pergunta-primeira-tela p {
         font-size: 12px;
     }
+    .pergunta-segunda-tela, .resposta-pergunta{
+        position: relative;
+        display: flex;
+        width: 200px;
+        height: 80px;
+        padding: 10px 10px 10px 10px;
+        background-color: #deb887;
+        border-radius: 5px;
+    }
+    .pergunta-segunda-tela p, .resposta-pergunta p {
+        font-size: 12px;
+        font-weight: 400;
+    }
+    .pergunta-segunda-tela ion-icon{
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+    }
+    .resposta-pergunta{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 10px 10px 3px 10px;
+        background-color: rgb(135, 222, 150);
+    }
+    .opcoes{
+        display: flex;
+        justify-content: space-around;
+        margin-top: 5px;
+    }
+    .zap, .nao-lembrei, .quase-nao-lembrei{
+        height: 24px;
+        width: 55px;
+        border-radius: 5px;  
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+    }
+    .zap p, .nao-lembrei p, .quase-nao-lembrei p {
+        font-size: 7px;
+        font-weight: 400;
+        line-height: 8px;
+        color: #FFFFFF;
+        text-align: center;
+    }
+    .zap{
+        background: #2FBE34;
+    }
+    .quase-nao-lembrei{
+        background: #FF922E;
+    }
+    .nao-lembrei{
+        background: #FF3030;
+    }
+
+    .resposta-zap, .resposta-quase, .resposta-nao{
+        text-decoration: line-through;
+    }
+    .resposta-zap p, .resposta-zap {
+        text-decoration-color: #2FBE34;
+        color: #2FBE34;
+    }
+    .resposta-quase, .resposta-quase p{
+        text-decoration-color: #FF922E;
+        color: #FF922E;
+    }
+    .resposta-nao p, .resposta-nao {
+        text-decoration-color: #FF3030;
+        color: #FF3030;
+    }
+
     footer{
         position: fixed;
         bottom: 0;
